--- a/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
+++ b/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/UnitCoverterPart2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2BD50856-A7A6-4041-82DA-CBC5EB5E7612}</ProjectGuid>
+    <ProjectGuid>{BFC42E98-9842-484F-930F-AB91CD10BFC5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WPFConverterv2</RootNamespace>
-    <AssemblyName>WPFConverterv2</AssemblyName>
+    <RootNamespace>UnitCoverterPart2</RootNamespace>
+    <AssemblyName>UnitCoverterPart2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -78,17 +78,17 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="IStatisticsRepository.cs" />
+    <Compile Include="Model\EntityModel.cs" />
     <Compile Include="Model\MyStatistics2.cs" />
-    <Compile Include="Model\StatisticsModel.cs" />
-    <Compile Include="Model\sysdiagram.cs" />
-    <Compile Include="Statistic.cs" />
-    <Compile Include="StatisticsAzureStorage.cs" />
+    <Compile Include="Model\sysdiagrams.cs" />
+    <Compile Include="Services\ConvertersService.cs" />
+    <Compile Include="Services\TemperatureConverter.cs" />
+    <Compile Include="Services\WeightConverter.cs" />
+    <Compile Include="Services\LenghtConverter.cs" />
+    <Compile Include="StatisticDTO.cs" />
+    <Compile Include="StatisticsAzureStorageRepository.cs" />
     <Compile Include="StatisticsEntity.cs" />
     <Compile Include="StatisticsSqlRepository.cs" />
-    <Page Include="InsertPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,9 +96,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="InsertPage.xaml.cs">
-      <DependentUpon>InsertPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -133,7 +130,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <ProjectReference Include="..\Converter.SDK\Converter.SDK.csproj">
+      <Project>{ead57d6e-3be0-42c6-874b-4c46627b1eec}</Project>
+      <Name>Converter.SDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
