--- a/Konwerter/Konwerter/Konwerter.csproj
+++ b/Konwerter/Konwerter/Konwerter.csproj
@@ -79,17 +79,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AzureStorageRepository.cs" />
-    <Compile Include="Model\Db.cs" />
-    <Compile Include="IStatisticsRepository.cs" />
-    <Compile Include="Services\ConvertersService.cs" />
-    <Compile Include="Services\LengthConversion.cs" />
-    <Compile Include="Model\DbAzure.cs" />
-    <Compile Include="Model\DbSql.cs" />
-    <Compile Include="SqlRepository.cs" />
-    <Compile Include="StatisticsDTO.cs" />
-    <Compile Include="Services\TemperatureConversion.cs" />
-    <Compile Include="Services\WeightConversion.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -131,6 +120,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Converter.Logic\Converter.Logic.csproj">
+      <Project>{c8e8a5d3-67e7-4123-a5fe-7bab98c6b9e8}</Project>
+      <Name>Converter.Logic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Converter.SDK\Converter.SDK.csproj">
       <Project>{5617518c-4d68-44c3-a08d-88c83c5a077b}</Project>
       <Name>Converter.SDK</Name>
